<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textC203"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c203Full"/>

    <TextView
        android:id="@+id/textC206"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c206Full"/>

    <TextView
        android:id="@+id/textC218"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c218Full"/>

    <TextView
        android:id="@+id/textC235"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c235Full"/>

    <TextView
        android:id="@+id/textC346"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c346Full"/>

    <TextView
        android:id="@+id/textG935"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g935Full"/>

</LinearLayout>